# FL

./: README.md
Lera_Dasha-main/: main.cpp  output.txt  text.txt
assembly/: appearance.cpp  appearance.h  arrow.cpp  arrow.h  circle.cpp  main.cpp  scribblearea.h  sqribblearea.cpp  tex.cpp  tex.h
assembly-main (2)/: output.txt
assembly-main (2)/almost done/: appearance.cpp  appearance.h  arrow.cpp  arrow.h  circle.cpp  circle.h  main.cpp  scribblearea.h  sqribblearea.cpp  tex.cpp  tex.h  text.cpp  text.h
assembly-main (2)/assembly-main/qtprojects/build-assembly-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.assembly.Debug  object_script.assembly.Release
assembly-main (2)/assembly-main/qtprojects/build-assembly-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_appearance.cpp  moc_scribblearea.cpp  moc_text.cpp
formal_languages_project/formal_languages/: CMakeLists.txt  appearance.cpp  appearance.h  arrow.cpp  arrow.h  assembly.pro  circle.cpp  circle.h  main.cpp  scribblearea.h  sqribblearea.cpp  tex.cpp  tex.h  text.cpp  text.h
